--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,8 +1,12 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
-
+@font-face {
+  font-family: 'EmberBold';
+  src: url('../assets/fonts/Ember/AmazonEmber_Bd.ttf');
+}
 /** Ionic CSS Variables **/
 :root {
+  --ion-font-family: 'EmberBold';
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
