--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -17,6 +17,7 @@ ion-header{
     background-color: #465b6e;
 }
 
+//ion-slides for highlight
 .highlight{
     text-align: center;
     background-color: gray;
@@ -24,6 +25,14 @@ ion-header{
     height: 200px;
     border-radius: 10px;
     margin-top: 10px;
+}
+
+//works for highlight better
+.templateswiper{
+    background-color: red;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
 
 .miniheader{
@@ -36,4 +45,39 @@ ion-header{
 
 .chevron{
     font-size: 22px;
+}
+
+.scrolling-wraper{
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+
+    .originals{
+        display: inline-block;
+    }
+    .movies{
+        display: inline-block;
+    }
+}
+
+::-webkit-scrollbar{
+    display: none;
+}
+
+.originals {
+    border: 2px solid red;
+    border-radius: 10px;
+    margin-right: 6px;
+    width: 140px;
+    height: 180px;
+    background: black;
+}
+
+.movies{
+    border: 2px solid red;
+    border-radius: 10px;
+    margin-right: 6px;
+    width: 160px;
+    height: 100px;
+    background: black;
 }
