11/10/2022 1. redesign movie poster size for home page 2. implemented ui for downloads page 3. implemented search function and completed find page 4. search function takes an expression from the search bar and download related data from api

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -71,7 +71,8 @@
       
       <div class="scrolling-wraper">
         <div class="movie" *ngFor="let detail of tenPopularMovies">
-          <ion-img [src]="detail.image"></ion-img>
+          <!--<ion-img [src]="detail.image"></ion-img>-->
+          <img [src]="detail.image" class="poster">
         </div>
       </div>
       
@@ -107,7 +108,8 @@
     <ion-row>
       <div class="scrolling-wraper">
         <div class="movie" *ngFor="let rec of recommendedMovies">
-          <ion-img [src]="rec.image"></ion-img>
+          <!--<ion-img [src]="rec.image"></ion-img>-->
+          <img [src]="rec.image" class="poster">
         </div>
       </div>
     </ion-row>
