--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,27 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+    <div>Downloads</div>
+    <div slot="end" style="margin-right: 10px;"><img src="../../assets/icon/cast.png"></div>
+    <div slot="end"><img src="../../assets/icon/user.png"></div>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  
+  <div class="noDownload">
+    <div>
+      No videos downloaded
+    </div>
+    <div class="secondRow">
+      Auto downloads: On
+    </div>
+    <div class="secondRow">
+      <div class="dot">.</div>
+    </div>
+    <div class="secondRow">
+      <div class="manage">Manage</div>
+    </div>
+  </div>
+  
+  
 </ion-content>
