--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,25 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+    <div>Find</div>
+    <div slot="end" style="margin-right: 10px;"><img src="../../assets/icon/cast.png"></div>
+    <div slot="end"><img src="../../assets/icon/user.png"></div>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-searchbar placeholder="Search by actor, title..." class="custom" (ionChange)="search($event.target.value)"></ion-searchbar>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+
+    <div *ngIf="spin == true" class="loading">
+      <ion-spinner name="crescent"></ion-spinner>
+    </div>
+
+      <ion-list *ngFor="let movie of result"  class="list" >
+        <ion-item>
+          <ion-label>
+            {{movie.title}}
+          </ion-label>
+        </ion-item>
+      </ion-list>
+
 </ion-content>
