--- a/src/global.scss
+++ b/src/global.scss
@@ -25,3 +25,10 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+ion-toolbar{
+    --background: transparent;
+    padding-left: 12px;
+    padding-right: 12px;
+    margin-top: 5px;
+}
+
