12/10/2022 1. implemented Title Detail Page 2. implemented Search Title Api service where it returns a title meta data from IMdB Api

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -16,7 +16,7 @@
 
       <ion-list *ngFor="let movie of result"  class="list" >
         <ion-item>
-          <ion-label>
+          <ion-label routerLink="/detail/{{movie.id}}">
             {{movie.title}}
           </ion-label>
         </ion-item>
